  IndexReader to enable concurrent rewriting. Please note: This is implemented in
  a backwards compatible way. A query overriding any of both rewrite methods is
  supported. To implement this backwards layer in Lucene 9.x the
  RuntimePermission "accessDeclaredMembers" is needed in applications using
  SecurityManager.  (Patrick Zhai, Ben Trent, Uwe Schindler)

New Features
---------------------
(No changes)

Improvements
---------------------

* GITHUB#12245: Add support for Score Mode to `ToParentBlockJoinQuery` explain. (Marcus Eagan via Mikhail Khludnev)

* GITHUB#12305: Minor cleanup and improvements to DaciukMihovAutomatonBuilder. (Greg Miller)

Optimizations
---------------------

* GITHUB#12270 Don't generate stacktrace in CollectionTerminatedException. (Armin Braun)

* GITHUB#12160: Concurrent rewrite for AbstractKnnVectorQuery. (Kaival Parikh)

* GITHUB#12286 Toposort use iterator to avoid stackoverflow. (Tang Donghai)

* GITHUB#12235: Optimize HNSW diversity calculation. (Patrick Zhai)

Bug Fixes
---------------------

* GITHUB#12291: Skip blank lines from stopwords list. (Jerry Chin)

Other
---------------------
(No changes)

======================== Lucene 9.6.0 =======================

API Changes
---------------------

* GITHUB#12116: Introduce IndexableField#storedValue() to expose the value that
  should be stored to IndexingChain without needing to guess the field's type.
  (Adrien Grand, Robert Muir)

* GITHUB#12129: Move DocValuesTermsQuery from sandbox to SortedDocValuesField#newSlowSetQuery
  and SortedSetDocValuesField#newSlowSetQuery. (Robert Muir)

* GITHUB#12173: TermInSetQuery#getTermData has been deprecated. This exposes internal implementation details that we
  may want to change in the future, and users shouldn't rely on the encoding directly. (Greg Miller)

* GITHUB#11746: Deprecate LongValueFacetCounts#getTopChildrenSortByCount. (Greg Miller)

New Features
---------------------
